--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email:
 description: ""
 keyword: "sq, sq blog, sq博客, 前端, js, vue"
-url: "https://4sq.me"          # your host, for absolute URL
+url: "https://github.com/1f606/1f606.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/1f606/1f606.github.io.git" # you code repository
 
